--- a/_posts/0000-01-02-kumouaSBD2.md
+++ b/_posts/0000-01-02-kumouaSBD2.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-He on X-Games mode.
+Oh my gahhh...he on X-Games mode.
 Use the left arrow to go back!
